<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <RelativeLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black"
        android:padding="30dp">

        <TextView
            android:id="@+id/mainTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:paddingTop="50dp"
            android:text="@string/appTitle"
            android:textColor="@android:color/white"
            android:fontFamily="@font/bigjohnpro"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/eventTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/mainTitle"
            android:layout_centerHorizontal="true"
            android:paddingTop="180dp"
            android:text="@string/sampleTitle"
            android:textColor="@android:color/white"
            android:fontFamily="@font/bigjohnpro"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/dDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/eventTitle"
            android:layout_centerHorizontal="true"
            android:paddingTop="5dp"
            android:text="@string/sampleDate"
            android:textColor="@android:color/white"
            android:fontFamily="@font/bigjohnpro"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/dateFromTo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/dDate"
            android:layout_centerHorizontal="true"
            android:paddingTop="5dp"
            android:text="@string/dateFrom"
            android:textColor="@android:color/white"
            android:fontFamily="@font/bigjohnpro"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/mainTitle"
            android:paddingTop="90dp"
            android:paddingEnd="20dp"
            android:paddingStart="20dp">

            <com.mikhaellopez.circularprogressbar.CircularProgressBar
                android:id="@+id/cProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cpb_background_progressbar_color="#b6bbd8"
                app:cpb_background_progressbar_width="30dp"
                app:cpb_progress_direction="to_right"
                app:cpb_progressbar_color="#3f51b5"
                app:cpb_progressbar_width="15dp"
                app:cpb_round_border="false" />

        </LinearLayout>

        <Button
            android:id="@+id/addButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@android:color/black"
            android:text="@string/editEvent"
            android:textColor="@android:color/holo_red_light"
            android:fontFamily="@font/bigjohnpro"
            android:textSize="20sp" />

    </RelativeLayout>

</layout>