<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".DateActivity">

    <LinearLayout
        android:background="@android:color/black"
        android:orientation="vertical"
        android:layout_width="300dp"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="#FF7A00"
                android:gravity="center"
                android:text="@string/editEvent"
                android:textColor="@android:color/white"
                android:fontFamily="@font/bigjohnpro"
                android:textSize="25sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/eventName"
                android:textColor="@android:color/white"
                android:fontFamily="@font/bigjohnpro"
                android:textSize="20sp"/>

            <EditText
                android:id="@+id/eventName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/white"
                android:maxLength="15"
                android:inputType="text"
                android:textColor="@android:color/white"
                android:fontFamily="@font/bigjohnpro"
                android:textSize="20sp"
                tools:ignore="Autofill,LabelFor" />

            <Button
                android:id="@+id/dateStartBT"
                android:onClick="showDatePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/black"
                android:text="@string/startDate"
                android:textColor="@android:color/holo_red_light"
                android:fontFamily="@font/bigjohnpro"
                android:textSize="20sp"/>

            <Button
                android:id="@+id/dateEndBT"
                android:onClick="showDatePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/black"
                android:text="@string/endDate"
                android:textColor="@android:color/holo_blue_light"
                android:fontFamily="@font/bigjohnpro"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/startDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/christmas"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                tools:ignore="SmallSp"/>

            <TextView
                android:id="@+id/endDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/christmas"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                tools:ignore="SmallSp" />

        </LinearLayout>

        <View
            android:background="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="1dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:onClick="saveEvent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/black"
                android:text="@string/save"
                android:textColor="#FF7A00"
                android:fontFamily="@font/bigjohnpro"
                android:textSize="20sp" />

        </LinearLayout>

    </LinearLayout>

</layout>